<resources>
    <string name="app_name">Class Attendance</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="classes">Classes</string>
    <string name="calendar">Calendar</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <string name="editProfile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="changeEmail">Change email</string>
    <string name="changePassword">Change password</string>

    <string name="homeText">Attend upcoming classes</string>
    <string name="dashboard">Dashboard</string>
    <string name="survey">Add Survey</string>
    <string name="reviews">Check Reviews</string>
    <string name="analysis">Analysis</string>

    <string name="adminText">Admin Panel</string>
    <string name="firstNameUser">First Name</string>
    <string name="lastNameUser">Last Name</string>
    <string name="emailUser">Email</string>
    <string name="passwordUser">Password</string>
    <string name="userType">User Type</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="teachers">Teachers:</string>
    <string name="emptyTeacher" />
    <string name="admin">Admin</string>
    <string name="addUser">Add New User</string>

    <string name="addNewCourse">Add New Course</string>
    <string name="viewCourses">View Courses</string>
    <string name="myCourses">My Courses</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="addCourse">Add Course</string>

    <string name="backBtn">Back</string>
    <string name="allCourses">All Courses</string>
    <string name="course">Course</string>
    <string name="className">Class</string>
    <string name="enroll">Enroll</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="upcomingClasses">Upcoming Classes</string>
    <string name="pastClasses">Past Classes</string>
    <string name="currentClasses">Current Classes</string>
    <string name="currentClass">Current Class</string>
    <string name="currentClassesMessage">There are no current classes</string>
    <string name="currentClassMessage">There is no current class</string>
    <string name="upcomingClassesMessage">There are no upcoming classes</string>

    <string name="calendarText">Class Schedule</string>
    <string name="addClass">Add Class</string>
    <string name="addNewClass">Add New Class</string>
    <string name="viewClasses">View Classes</string>
    <string name="date">Date (dd-MM-yyyy)</string>
    <string name="time">Time (HH:mm)</string>
    <string name="edit">Edit</string>
    <string name="dateTime">Date and Time:</string>

    <string name="classAttendance">Class Attendance</string>
    <string name="searchAttendance">Search student, class, course, etc.</string>
    <string name="attend">Attend</string>
    <string name="review">Review</string>
    <string name="leaveReview">Leave a review</string>
    <string name="timeReview">Class time and pace management</string>
    <string name="presentationReview">Teacher organization and presentation</string>
    <string name="importanceReview">Importance of the material</string>
    <string name="leaveComment">Leave a comment for improvement</string>
    <string name="bad">Bad</string>
    <string name="ok">Okay</string>
    <string name="good">Good</string>
    <string name="great">Great</string>

    <string name="confirmAttendance">Confirm attendance</string>
    <string name="confirmStudents">Students</string>
    <string name="viewReviews">Reviews</string>

    <string name="studentsAttendingClass">Students attending</string>

</resources>