<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <item
        android:id="@+id/courses"
        android:title="@string/courses"
        android:icon="@drawable/ic_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <item
        android:id="@+id/classes"
        android:title="@string/classes"
        android:icon="@drawable/ic_classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
<!--    <item-->
<!--        android:id="@+id/calendar"-->
<!--        android:title="@string/calendar"-->
<!--        android:icon="@drawable/ic_calendar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</menu>