<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ConfirmAttendanceFragment">

    <LinearLayout
        android:id="@+id/headerConfirmAttend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/attendBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/backBtn"
            android:backgroundTint="@color/white"/>

        <TextView
            android:id="@+id/confirmAttendanceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/confirmAttendance"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="textStart"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/headerConfirmAttend">

        <TextView
            android:id="@+id/classAttend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/className"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:layout_margin="16sp"/>

        <TextView
            android:id="@+id/courseAttend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:layout_margin="16sp"/>

        <TextView
            android:id="@+id/teacherClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:layout_margin="16sp"/>

        <Button
            android:id="@+id/confirmAttendBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:backgroundTint="@color/blue"
            android:padding="10sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_margin="16sp"/>
    </LinearLayout>

</RelativeLayout>