<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/blue"
    app:contentPadding="10sp"
    app:cardCornerRadius="15dp"
    android:layout_marginTop="5sp"
    android:layout_marginBottom="5sp"
    android:id="@+id/courseCard">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start">

        <TextView
            android:id="@+id/courseNameCard"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5sp"/>

        <TextView
            android:id="@+id/CourseDesCard"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_margin="5sp"/>

        <LinearLayout
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/teacherCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teachers"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_margin="5sp"
                android:layout_marginEnd="0sp"/>

            <TextView
                android:id="@+id/teacherNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyTeacher"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_margin="5sp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/enrollBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enroll"
        android:backgroundTint="@color/white"
        android:textColor="@color/blue"
        android:layout_gravity="end"
        android:textStyle="bold"/>

</androidx.cardview.widget.CardView>