<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/blue"
    app:contentPadding="10sp"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    android:layout_margin="5sp"
    android:id="@+id/myCourseCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start">

        <TextView
            android:id="@+id/myCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5sp"/>

        <TextView
            android:id="@+id/myCourseDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_margin="5sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/myTeacherCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teachers"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_margin="5sp"
                android:layout_marginEnd="0sp"/>

            <TextView
                android:id="@+id/myTeacherNameCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emptyTeacher"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_margin="5sp"/>
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>