<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.StudentHomeFragment">

    <TextView
        android:id="@+id/firstHomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:text="@string/homeText"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/currentClasses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/firstHomeText"
        android:layout_marginBottom="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/currentClasses"
            android:textColor="@color/blue"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/currentClassesMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/currentClassesMessage"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/studentCurrentHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/currentClasses">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/upcomingClasses"
            android:textColor="@color/blue"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/upcomingClassesMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/upcomingClassesMessage"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/studentUpcomingHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"/>

    </LinearLayout>



</RelativeLayout>