<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/teachersCourses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.TeacherCoursesFragment">


    <LinearLayout
        android:id="@+id/coursesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/teacherCourses"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16sp"
            android:text="@string/courses"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/buttonAddCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/addNewClass"/>

        <ImageButton
            android:id="@+id/buttonViewCourses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:src="@drawable/ic_list"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/viewClasses"/>

    </LinearLayout>

    <TextView
        android:id="@+id/teacherMyCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coursesBtn"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:text="@string/myCourses"
        android:textColor="@color/blue"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teacherCoursesRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:layout_below="@+id/teacherMyCourses"/>

</RelativeLayout>
